#    - bugfix: fixed badly-used options warning/critical
#    - enhancement: added checks of undefined variables
#    - enhancement: reviewed debug/verbose mode to be clearer and better understandable
#    - enhancement: SnmpUtils.pm now more robust and verbose in case of problem
#    - bugfix: port option (-P) now working
#    - bugfix: fixed some snmpv3 authentication problems 
#
#   ----------------------------------------------------------------------
# * 0.03b1
#   ----------------------------------------------------------------------
#    - feature: all styles are now handled in an external css stylesheet. 
#      3 stylesheets currently available: 
#       * classic.css: follow the style of previous versions of the plugin
#       * icinga.css: follow the style of the icinga classic ui
#       * nagiosxi.css: follow the style of the nagiosxi ui
#    - change: moved javascript to external file & reviewed to not generate conflicts 
#      with styles defined in css stylesheets
#    - feature: new interface inclusion/exclusion system distinguing properties and 
#      traffic load:
#       * include/exclude interface from load tracking. Load tracking consists 
#         in a check of the bandwidth usage of the interface. By default, all 
#         the interfaces are included in this tracking. Excluding an interface 
#         from that tracking is usually done for interfaces that we don't want 
#         any tracking (e.g. loopback interfaces)
#       * include/exclude interface from property tracking. Property tracking 
#         consists in the check of any changes in the properties of an interface, 
#         properties listed via the --track option. By default, only the 
#         "operstatus" property is tracked. You have the ability to exclude/include 
#         some interfaces from that check. This would be done for exemple for 
#         ports on which printers are connected (indeed, some printers going in 